# MEYOU

./: fix_profile.sh  package-lock.json
client/: angular.json  cors.json  package-lock.json  package.json
client/src/: _pixel-theme.scss  index.html  styles.scss
client/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.ts
client/src/app/_guard/: auth-guard.ts  logout-guard.ts
client/src/app/_helpers/: password-validator.ts
client/src/app/_interceptors/: auth-interceptor.ts  loading-interceptor.ts
client/src/app/_models/: passport.ts
client/src/app/_services/: auth-service.ts  loading-service.ts  mission.service.ts  notification.service.ts  passport-service.ts
client/src/app/home/: home.html  home.scss  home.ts
client/src/app/login/: login.html  login.scss  login.ts
client/src/app/mission/: mission.html  mission.scss  mission.ts
client/src/app/navbar/: navbar.html  navbar.scss  navbar.ts
client/src/environments/: environment.development.ts  environment.ts
server/: .env.migration  Cargo.toml
server/src/application/use_cases/: brawlers.rs
server/src/domain/entities/: mod.rs
server/src/domain/repositories/: brawlers.rs
server/src/domain/value_objects/: brawler_model.rs
server/src/infrastructure/database/repositories/: brawlers.rs
server/src/infrastructure/http/routers/: brawlers.rs
server/statics/: index.html  main-4KSRROZI.js  main-6QAVR6QS.js  main-CEODSKC4.js  main-M45ZK7XZ.js  main-NSWFHJXZ.js  main-RXNIEJYB.js  main-UBFR7KHA.js  main-VVNI7OFC.js  main-XMMVHORY.js  main-YKQV4QH3.js  styles-FPOGZ6LK.css
(+16 files in other folders)
