[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argon2 = { version = "0.5", features = ["password-hash", "rand", "std"] }
async-trait = "0.1"
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie", "typed-header", "multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.18"
diesel = { version = "2.2", features = [
    "postgres",
    "serde_json",
    "chrono",
    "r2d2",
] }
dotenvy = "0.15"
infer = "0.16"
jsonwebtoken = "9.3"
reqwest = { version = "0.12" , features = ["multipart"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

